--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -2,11 +2,10 @@
   // These tasks will run in order when initializing your CodeSandbox project.
   "setupTasks": [
     {
-      "command": "npm install",
+      "command": "npm install --legacy-peer-deps",
       "name": "Installing Dependencies"
     }
   ],
-
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
     "dev": {
